# TicTacTerminal

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Game.cpp  Game.h
src/entities/: Bot.cpp  Bot.h  Human.cpp  Human.h  Player.cpp  Player.h
src/ui/: GameGUI.cpp  GameGUI.h  GameUI.cpp  GameUI.h  IGameUI.h  UISwitcher.cpp  UISwitcher.h
src/utils/: BotDifficulty.h  Foundation.cpp  Foundation.h  GameMode.h  PlayerInfo.h  TerminalStyle.h  TextUtils.h  Validation.cpp  Validation.h
